--- a/CostcoProject/res/values/strings.xml
+++ b/CostcoProject/res/values/strings.xml
@@ -12,6 +12,11 @@
     <string name="author_mobile">2223234504</string>
     <string name="title_activity_about">About</string>
     <string name="button_ok">OK</string>
-    <string name="title_activity_store_detail">StoreDetailActivity</string>    
+    <string name="button_call">Call</string>
+    <string name="pot">Public opening times</string>
+    <string name="wkdays">Weekdays</string>
+    <string name="wknd">Weekend</string>    
+    <string name="button_image">Image</string>
+    <string name="comment_ex">A great sale store, you can find anything you want at the best price</string>
 
 </resources>
